modal: Fix simplebar overlap with content in todo/poll widget modal.
This commit fixes the overlap of simplebar with content in widget
modal by adding a padding for the simplebar-content.

Fixes part of zulip#32950.

--- a/web/styles/modal.css
+++ b/web/styles/modal.css
@@ -533,6 +533,7 @@
             height: 0;
             overflow: auto;
             flex-grow: 1;
+            padding-right: var(--width-simplebar-scroll-hover);
 
             .option-row {
                 list-style-type: none;
